2003-01-07  Marcus Lundblad <ml@update.uu.se>
	* fvwm/style.c (style_parse_one_style_option):
	* fvwm/fvwm.1.in:
	Removed duplicate styles Unclosable,Unmaximizable,Uniconifiable and
	DisallowMaximizeFixedSize
	
2003-01-06  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in: Lang check.

2003-01-03  olicha  <olivier.chapuis@free.fr>

	* fvwm/commands.h:
	* INSTALL.fvwm:
	* fvwm/ewmh.h: 
	* fvwm/ewmh_intern.h:
	* fvwm/ewmh_names.c:
	* fvwm/ewmh_icons.c:
	* fvwm/ewmh_events.c:
	* fvwm/ewmh_conf.c:
	* fvwm/ewmh.c:
	* fvwm/gnome.c:
	* fvwm/gnome.h:
	* fvwm/functable.c (func_table):
	* fvwm/fvwm.c (setVersionInfo):
	* acconfig.h:
	* configure.in:
	Removed GNOME and HAVE_EWMH ifdef

	* fvwm/fvwm.1.in:
	Documented UseTitleDecorRotation

2003-01-03  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/module_interface.c (MoveViewport):
	* fvwm/virtual.c (CMD_DesktopSize, CMD_Send_WindowList):
	M_NEW_PAGE now has 7 arguments

2003-01-02  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.1.in:
	Documented  the new icon style options
		
	* fvwm/fvwm.h:
	* fvwm/icons.h:
	* fvwm/icons.c (DrawIconTitleWindow):
	(DrawIconPixmapWindow):
	(setup_icon_title_size):
	* fvwm/style.c (style_parse_one_style_option):
	Fixed Icon{Title,Background}Relief arguments

	* fvwm/icons.c (GetIconPicture):
	(SetIconPixmapSize):
	Fixed IconSize style for non shaped depth > 1 pixmaps

2003-01-02  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* fvwm/commands.h:
	* fvwm/conditional.c (CMD_On):
	* fvwm/functable.c:
	* fvwm/fvwm.1.in:
	new conditional command On for non-window related conditions

	* fvwm/execcontext.h:
	* fvwm/fvwm.c (Done, SetRCDefaults, StartupStuff):
	two new exec contexts for restarting

2003-01-02  olicha  <olivier.chapuis@free.fr>

	* fvwm/builtins.c (ReadMultiPixmapDecor):
	StretchedPixmap -> AdjustedPixmap

	* fvwm/fvwm.1.in:
	Documented Colorset in BorderStyle, TitleStyle and ButonsStyle
	Documented the new MultiPixmap syntax

2002-12-31  Mikhael Goikhman  <migo@homemail.com>
